<resources>
    <string name="app_name">AgroMobile</string>
    <string name="txt_login">Nombre de usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="ErrorLoginPasswIncorrect">Credenciales incorrectas</string>
    <string name="Red_ISSUE">Error de red</string>
    <string name="iniciar_proceso">Iniciar Proceso</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="welcome_txt">Bienvenido</string>
    <string name="mis_procesos">Mis Procesos</string>
    <string name="drawer_open">Menu lateral abierto</string>
    <string name="drawer_close">Menu lateral cerrado</string>
    <string name="profile_txt">Perfil</string>
    <string name="txtInfo">Informacion</string>
    <string name="txtGuide">Guia</string>
    <string name="txtCalculator">Calculador</string>
    <string name="txtProfile">Perfil</string>
    <string name="rxtlogout">Cerrar sesión</string>
    <string name="error_fields">\"Error, Revise Campos\"</string>
    <string name="aeronaves">Mis aeronaves</string>
    <string name="login_btn_register">Registro</string>
    <string name="login_btn_in">Entrar</string>
    <string name="login_pass">contraseña</string>
    <string name="login_usr">Correo</string>
    <string name="login_error">El nombre de usuario y la contraseña no coinciden</string>
    <string name="no_data_available">No hay  procesos activos</string>
    <string name="ok">Aceptar</string>
    <string name="action_delete">Eliminar</string>
    <string name="confirm_password">Confirme Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="name">Nombre</string>
    <string name="register">Register</string>
    <string name="Guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="duracion_en_semanas">Duracion en Semanas</string>
    <string name="n_mero_de_pruebas">Número de pruebas</string>
    <string name="camaras">Cámaras</string>
    <string name="txt_referencia">Referencia</string>
    <string name="txt_longitud_focal">Longitud focal</string>
    <string name="txt_velocidad_de_captura_en_fotos_segundo">Velocidad de captura en fotos/segundo</string>
    <string name="txt_resoluci_n_dada_en_p_xeles">Resolución dada en píxeles</string>
    <string name="txt_horizontal">Horizontal</string>
    <string name="txt_vertical">Vertical</string>
    <string name="txt_tama_o_del_sensor_dado_en_mil_metros">Tamaño del sensor dado en milímetros</string>
    <string name="txt_guardar_c_mara">Guardar Cámara</string>
    <string name="txt_ingrese_los_datos_de_la_aeronave">Ingrese los datos de la aeronave</string>
    <string name="txt_autonomia_en_minutos">Autonomía en minutos</string>
    <string name="txt_velociadad_crucero_en_m_s">Velocidad crucero en m/s</string>
    <string name="txt_altura_maxima_en_metros">Altura máxima en metros</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_no_se_han_agregado_aeronaves">No se han agregado aeronaves</string>
    <string name="txt_no_se_han_agregado_camaras">No se han agregado Camaras</string>
    <string name="txt_paso_1_de_3">Paso 1 de 4</string>
    <string name="txt_siguiente">Siguiente</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_fecha_inicio">Fecha Inicio</string>
    <string name="txt_fecha_fin">Fecha Fin</string>
    <string name="txt_registro_agromobile">Registro AgroMobile</string>
    <string name="txt_registrarme">Registrarme</string>
    <string name="txt_procesos">Procesos</string>
    <string name="txt_new_process">Nuevo Proceso</string>
    <string name="txt_step2of3">paso 2 de 4</string>
    <string name="txt_task">"Tarea 1 de "</string>
    <string name="txt_task2">"Tarea 2 de "</string>
    <string name="task_3">"Tarea 3 de "</string>
    <string name="task_4">"Tarea 4 de "</string>
    <string name="txt_add_aeronaves">Agregar aeronaves a Proceso</string>
    <string name="txt_process_3_step_3">paso 3 de 4</string>
    <string name="add_cameras_proces">Agregar cámaras al proceso</string>
    <string name="txt_select_aircraft">Seleccione una aeronave</string>
    <string name="select_a_camera">Seleccione una cámara</string>
    <string name="recordatory_title">"Recordatorio AgroMobile proceso "</string>
    <string name="thisisarecordatory">"Este es un recordatorio para la realización de la prueba "</string>
    <string name="txt_process">Procesos</string>
    <string name="txt_init_on">"Inició en "</string>
    <string name="txt_finish_on">"Termina en "</string>
    <string name="finish">Finalizado</string>
    <string name="on_process">En proceso</string>
    <string name="txt_estara_available">Estará disponible en el sitio web tres días alrededor de la fecha indicada</string>
    <string name="input_to_sistemweb">Ingrese al sistema Web para subir las fotografías al servidor</string>
    <string name="already_upload_">Ya se han subido fotografías al servidor, procesando</string>
    <string name="information_upload_correcltly">La información se ha subido correctamente</string>
    <string name="process_lost">Se ha perdido el proceso, se omitirá en los resultados</string>
    <string name="txt_register">Register</string>
    <string name="existent">" Existente"</string>
    <string name="password_diferent">Contraseñas Distintas</string>
    <string name="wrong_email">Email Incorrecto</string>
    <string name="verify_fields">Verifique, Todos los campos son obligatorios</string>
    <string name="wrong_network">Error de Red</string>
    <string name="wrong_data">Error de datos</string>
    <string name="my_aircraft">Mis Aeronaves</string>
    <string name="metters">" metros"</string>
    <string name="txt_minutes">" minutos"</string>
    <string name="photosbyseconds">fotos/segundo</string>
    <string name="txt_onprocess">EnProcesamiento</string>
    <string name="txt_finished">Terminado</string>
    <string name="tothe">" a las "</string>
    <string name="txt_autonom_a">Autonomía</string>
    <string name="txt_altura_m_xima">Altura máxima</string>
    <string name="txt_vel_crucero">Vel Crucero</string>
    <string name="l_focal">L/Focal</string>
    <string name="txt_resoluci_n">Resolución</string>
    <string name="dimen_sensor">Dimen/Sensor</string>
    <string name="vel_captura">Vel/Captura</string>
    <string name="txt_cameras">Cámaras</string>
    <string name="resumen_del_vuelo">Resumen del vuelo</string>
    <string name="altura_de_vuelo">Altura de vuelo</string>
    <string name="step4for4">Paso 4 de 4</string>
</resources>
