<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.julian.agromobile.AddCameraActivity">

    <EditText
        android:id="@+id/ref_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_referencia"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/focal_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_longitud_focal"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/velocidad_captura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/txt_velocidad_de_captura_en_fotos_segundo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/txt_resoluci_n_dada_en_p_xeles"
        android:textColor="@color/primaryDark"

        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_resol_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/txt_horizontal" />

        <EditText
            android:id="@+id/txt_resol_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_vertical"
            android:inputType="number"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/txt_tama_o_del_sensor_dado_en_mil_metros"
        android:textColor="@color/primaryDark"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/longitud_horiz_sensor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/txt_horizontal"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/longitud_vert_sensor"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:hint="@string/txt_vertical"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:theme="@style/ButtonAccent"
        android:enabled="false"
        android:id="@+id/button_add_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_guardar_c_mara"/>
</LinearLayout>
