<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_margin="@dimen/template_padding_small"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linear_template_aeronave"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/template_aircraft_ref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/txt_referencia"
                    android:textSize="15sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/txt_autonom_a"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/template_aircraft_autonomy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:text="Autonomia"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/txt_altura_m_xima"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/altura_maxima"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:text="Altura máxima"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/txt_vel_crucero"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/velocidad_crucero"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:text="Vel Crucero"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>