<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_margin="@dimen/template_padding_small"
        >
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear_template_camara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/template_camera_ref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Referencia"
                    android:textSize="15sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/l_focal"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/template_camera_focal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="L/Focal"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/txt_resoluci_n"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/template_camera_resolution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="HzxVertical"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/dimen_sensor"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/template_camera_sensorsize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="3"
                        android:text="Hzsensorxverticalsensor"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:textColor="#000000"
                        android:text="@string/vel_captura"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                    <TextView
                        android:id="@+id/template_camera_capturespeed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="Velocidad"
                        android:textSize="15sp"
                        android:maxLines="1"
                        />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>